# UMN_CSCI5611_FinalProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Jackson/src/: CMakeLists.txt  CMakeSettings.json  beepmain.cpp  main.cpp  oldmain.cpp  rawrmain.cpp  wavemain.cpp
Jackson/src/cmake/: FindGLM.cmake
Jackson/src/src/: Camera.cpp  Camera.h  ClothManager.cpp  Material.cpp  ShaderManager.cpp  TextureManager.cpp  main.cpp
Xinghua/: CMakeLists.txt
Xinghua/checkin/: checkin.cpp
assets/: cloth-Vertex.glsl  clothComputeShader.glsl
cmake/: FindSDL2_image.cmake
src/: Camera.cpp  Camera.h  ClothManager.cpp  ClothManager.h  Constants.h  Environment.cpp  Environment.h  GameObject.cpp  GameObject.h  Material.h  Model.cpp  Model.h  RayTracer.cpp  RayTracer.h  ShaderManager.cpp  ShaderManager.h  SoundManager.cpp  SoundManager.h  StringSim.cpp  StringSim.h  TextureManager.cpp  main.cpp  stephenmain.cpp
